--- a/site/docsource/Semantic-differences-from-other-backends.adoc
+++ b/site/docsource/Semantic-differences-from-other-backends.adoc
@@ -35,21 +35,19 @@ replaced by a strict pointer.
 
 ### Integers
 
-OCaml has `int`, `int32`, `nativeint` and `int64` types. Both `int32`
-and `int64` have the exact same semantic.
+OCaml has `int`, `int32`, `nativeint` and `int64` types.
+- Both `int32` and `int64` in BuckleScript have the exact same semantics as OCaml.
+- `int` in BuckleScript is the same as `int32` while in OCaml it's platform dependent.
+- `nativeint` is treated as JavaScript float, except for division.
+  For example, `Nativeint.div a b` will be translated into `a /b | 0`.
 
-#### `int`
-`int` in BuckleScript is the same as `int32` where it's platform
-dependent.
-#### `nativeint`
-Treated as JavaScript float, except for division. For example,
-`Nativeint.div a b` will be translated into `a /b | 0`.
-
-WARNING: `Nativeint.shift_right_logical x 0` is different from
+[WARNING]
+=======
+`Nativeint.shift_right_logical x 0` is different from
 `Int32.shift_right_local x 0`. The former is literally translated into
 `x >>> 0` (translated into an unsigned int), while the latter is
 `x | 0`.
-
+=======
 
 ### Printf.printf
 
